@@ -1,15 +1,13 @@
 package com.badbones69.crazyvouchers.paper.api.objects;
 
-import com.badbones69.crazyvouchers.paper.Methods;
-import com.badbones69.crazyvouchers.paper.CrazyVouchers;
-import com.badbones69.crazyvouchers.paper.api.FileManager;
-import com.badbones69.crazyvouchers.paper.api.enums.Messages;
+import com.badbones69.crazyvouchers.paper.api.enums.Translation;
+import com.ryderbelserion.cluster.bukkit.items.utils.DyeUtils;
+import com.ryderbelserion.cluster.bukkit.utils.LegacyLogger;
 import org.bukkit.Color;
 import org.bukkit.Sound;
 import org.bukkit.configuration.file.FileConfiguration;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class VoucherCode {
     
@@ -17,8 +15,6 @@ public class VoucherCode {
     private final String code;
     private final boolean enabled;
     private final boolean caseSensitive;
-    private boolean limited;
-    private int limit;
     private final String message;
     private final List<String> commands;
     private final boolean whitelistPermissionToggle;
@@ -36,29 +32,26 @@ public class VoucherCode {
     private Integer limiterLimit;
     private final boolean soundToggle;
     private final List<Sound> sounds = new ArrayList<>();
+    private float volume;
+    private float pitch;
     private final boolean fireworkToggle;
     private final List<Color> fireworkColors = new ArrayList<>();
     private final List<VoucherCommand> randomCommands = new ArrayList<>();
     private final List<VoucherCommand> chanceCommands = new ArrayList<>();
     private final List<ItemBuilder> items = new ArrayList<>();
 
-    private final CrazyVouchers plugin = CrazyVouchers.getPlugin();
-
-    private final Methods methods = plugin.getMethods();
-    
-    public VoucherCode(String name) {
+    public VoucherCode(FileConfiguration file, String name) {
         this.name = name;
-        FileConfiguration config = FileManager.Files.VOUCHER_CODES.getFile();
-        String path = "Voucher-Codes." + name + ".";
-        this.enabled = config.getBoolean(path + "Options.Enabled");
-        this.code = config.getString(path + "Code", "");
-        this.commands = config.getStringList(path + "Commands");
+        String path = "voucher-code.";
+        this.enabled = file.getBoolean(path + "options.enabled");
+        this.code = file.getString(path + "code", "");
+        this.commands = file.getStringList(path + "commands");
 
-        for (String commands : config.getStringList(path + "Random-Commands")) {
+        for (String commands : file.getStringList(path + "random-commands")) {
             this.randomCommands.add(new VoucherCommand(commands));
         }
 
-        for (String line : config.getStringList(path + "Chance-Commands")) {
+        for (String line : file.getStringList(path + "chance-commands")) {
             try {
                 String[] split = line.split(" ");
                 VoucherCommand voucherCommand = new VoucherCommand(line.substring(split[0].length() + 1));
@@ -66,77 +59,80 @@ public class VoucherCode {
                 for (int i = 1; i <= Integer.parseInt(split[0]); i++) {
                     chanceCommands.add(voucherCommand);
                 }
-            } catch (Exception e) {
-                plugin.getLogger().info("An issue occurred when trying to use chance commands.");
-                e.printStackTrace();
+            } catch (Exception exception) {
+                LegacyLogger.error("An issued occurred when trying to use chance commands.", exception);
             }
         }
 
-        for (String itemString : config.getStringList(path + "Items")) {
+        for (String itemString : file.getStringList(path + "items")) {
             this.items.add(ItemBuilder.convertString(itemString));
         }
 
-        this.caseSensitive = config.getBoolean(path + "Options.Case-Sensitive");
+        this.caseSensitive = file.getBoolean(path + "options.case-sensitive", false);
 
-        if (config.contains(path + "Options.Message")) {
-            this.message = config.getString(path + "Options.Message");
+        if (file.contains(path + "options.message")) {
+            this.message = file.getString(path + "options.message");
         } else {
             this.message = "";
         }
 
-        if (config.contains(path + "Options.Permission.Whitelist-Permission")) {
-            this.whitelistPermissionToggle = config.getBoolean(path + "Options.Permission.Whitelist-Permission.Toggle");
+        if (file.contains(path + "options.permission.whitelist-permission")) {
+            this.whitelistPermissionToggle = file.getBoolean(path + "options.permission.whitelist-permission.toggle");
 
-            if (config.contains(path + "Options.Permission.Whitelist-Permission.Node")) {
-                whitelistPermissions.add("voucher." + config.getString(path + "Options.Permission.Whitelist-Permission.Node").toLowerCase());
+            if (file.contains(path + "options.permission.whitelist-permission.node")) {
+                this.whitelistPermissions.add("voucher." + file.getString(path + "options.permission.whitelist-permission.node").toLowerCase());
             }
-            whitelistPermissions.addAll(config.getStringList(path + "Options.Permission.Whitelist-Permission.Permissions").stream().map(String :: toLowerCase).collect(Collectors.toList()));
-            this.whitelistCommands = config.getStringList(path + "Options.Permission.Whitelist-Permission.Commands");
+
+            this.whitelistPermissions.addAll(file.getStringList(path + "options.permission.whitelist-permission.permissions").stream().map(String::toLowerCase).toList());
+            this.whitelistCommands = file.getStringList(path + "options.permission.whitelist-permission.commands");
         } else {
             this.whitelistPermissionToggle = false;
         }
 
-        if (config.contains(path + "Options.Whitelist-Worlds.Toggle")) {
-            this.whitelistWorlds.addAll(config.getStringList(path + "Options.Whitelist-Worlds.Worlds").stream().map(String :: toLowerCase).collect(Collectors.toList()));
+        if (file.contains(path + "options.whitelist-worlds.toggle")) {
+            this.whitelistWorlds.addAll(file.getStringList(path + "options.whitelist-worlds.worlds").stream().map(String::toLowerCase).toList());
 
-            if (config.contains(path + "Options.Whitelist-Worlds.Message")) {
-                this.whitelistWorldMessage = config.getString(path + "Options.Whitelist-Worlds.Message");
+            if (file.contains(path + "options.whitelist-worlds.message")) {
+                this.whitelistWorldMessage = file.getString(path + "options.whitelist-worlds.message");
             } else {
-                this.whitelistWorldMessage = Messages.NOT_IN_WHITELISTED_WORLD.getMessageNoPrefix();
+                this.whitelistWorldMessage = Translation.not_in_whitelisted_world.getString();
             }
 
-            this.whitelistWorldCommands = config.getStringList(path + "Options.Whitelist-Worlds.Commands");
-            this.whitelistWorldsToggle = !this.whitelistWorlds.isEmpty() && config.getBoolean(path + "Options.Whitelist-Worlds.Toggle");
+            this.whitelistWorldCommands = file.getStringList(path + "options.whitelist-worlds.commands");
+            this.whitelistWorldsToggle = !this.whitelistWorlds.isEmpty() && file.getBoolean(path + "options.whitelist-worlds.toggle");
         } else {
             this.whitelistWorldsToggle = false;
         }
 
-        if (config.contains(path + "Options.Permission.Blacklist-Permissions")) {
-            this.blacklistPermissionsToggle = config.getBoolean(path + "Options.Permission.Blacklist-Permissions.Toggle");
+        if (file.contains(path + "options.permission.blacklist-permissions")) {
+            this.blacklistPermissionsToggle = file.getBoolean(path + "options.permission.blacklist-permissions.toggle");
 
-            if (config.contains(path + "Options.Permission.Blacklist-Permissions.Message")) {
-                this.blacklistPermissionMessage = config.getString(path + "Options.Permission.Blacklist-Permissions.Message");
+            if (file.contains(path + "options.permission.blacklist-permissions.message")) {
+                this.blacklistPermissionMessage = file.getString(path + "options.permission.blacklist-permissions.message");
             } else {
-                this.blacklistPermissionMessage = Messages.HAS_BLACKLIST_PERMISSION.getMessageNoPrefix();
+                this.blacklistPermissionMessage = Translation.has_blacklist_permission.getString();
             }
 
-            this.blacklistPermissions = config.getStringList(path + "Options.Permission.Blacklist-Permissions.Permissions");
-            this.blacklistCommands = config.getStringList(path + "Options.Permission.Blacklist-Permissions.Commands");
+            this.blacklistPermissions = file.getStringList(path + "options.permission.blacklist-permissions.permissions");
+            this.blacklistCommands = file.getStringList(path + "options.permission.blacklist-permissions.commands");
         } else {
             this.blacklistPermissionsToggle = false;
         }
 
-        if (config.contains(path + "Options.Limiter")) {
-            this.limiterToggle = config.getBoolean(path + "Options.Limiter.Toggle");
-            this.limiterLimit = config.getInt(path + "Options.Limiter.Limit");
+        if (file.contains(path + "options.limiter")) {
+            this.limiterToggle = file.getBoolean(path + "options.limiter.toggle");
+            this.limiterLimit = file.getInt(path + "options.limiter.limit");
         } else {
             this.limiterToggle = false;
         }
 
-        if (config.contains(path + "Options.Sound")) {
-            this.soundToggle = config.getBoolean(path + "Options.Sound.Toggle");
+        if (file.contains(path + "options.sound")) {
+            this.soundToggle = file.getBoolean(path + "options.sound.toggle");
 
-            for (String sound : config.getStringList(path + "Options.Sound.Sounds")) {
+            this.volume = (float) file.getDouble(path + ".options.sound.volume");
+            this.pitch = (float) file.getDouble(path + ".options.sound.pitch");
+
+            for (String sound : file.getStringList(path + "options.sound.sounds")) {
                 try {
                     this.sounds.add(Sound.valueOf(sound));
                 } catch (Exception ignored) {}
@@ -145,11 +141,11 @@ public class VoucherCode {
             this.soundToggle = false;
         }
 
-        if (config.contains(path + "Options.Firework")) {
-            this.fireworkToggle = config.getBoolean(path + "Options.Firework.Toggle");
+        if (file.contains(path + "options.firework")) {
+            this.fireworkToggle = file.getBoolean(path + "options.firework.toggle");
 
-            for (String color : config.getString(path + "Options.Firework.Colors").split(", ")) {
-                this.fireworkColors.add(methods.getColor(color));
+            for (String color : file.getString(path + "options.firework.colors").split(", ")) {
+                this.fireworkColors.add(DyeUtils.getColor(color));
             }
         } else {
             this.fireworkToggle = false;
@@ -157,106 +153,114 @@ public class VoucherCode {
     }
     
     public String getName() {
-        return name;
+        return this.name;
     }
     
     public String getCode() {
-        return code;
+        return this.code;
     }
     
     public boolean isEnabled() {
-        return enabled;
+        return this.enabled;
     }
     
     public boolean isCaseSensitive() {
-        return caseSensitive;
+        return this.caseSensitive;
     }
     
     public String getMessage() {
-        return message;
+        return this.message;
     }
     
     public List<String> getCommands() {
-        return commands;
+        return this.commands;
     }
     
     public boolean useWhiteListPermissions() {
-        return whitelistPermissionToggle;
+        return this.whitelistPermissionToggle;
     }
     
     public List<String> getWhitelistPermissions() {
-        return whitelistPermissions;
+        return this.whitelistPermissions;
     }
     
     public List<String> getWhitelistCommands() {
-        return whitelistCommands;
+        return this.whitelistCommands;
     }
     
     public boolean useWhitelistWorlds() {
-        return whitelistWorldsToggle;
+        return this.whitelistWorldsToggle;
     }
     
     public String getWhitelistWorldMessage() {
-        return whitelistWorldMessage;
+        return this.whitelistWorldMessage;
     }
     
     public List<String> getWhitelistWorlds() {
-        return whitelistWorlds;
+        return this.whitelistWorlds;
     }
     
     public boolean useBlacklistPermissions() {
-        return blacklistPermissionsToggle;
+        return this.blacklistPermissionsToggle;
     }
     
     public List<String> getWhitelistWorldCommands() {
-        return whitelistWorldCommands;
+        return this.whitelistWorldCommands;
     }
     
     public String getBlacklistMessage() {
-        return blacklistPermissionMessage;
+        return this.blacklistPermissionMessage;
     }
     
     public List<String> getBlacklistPermissions() {
-        return blacklistPermissions;
+        return this.blacklistPermissions;
     }
     
     public List<String> getBlacklistCommands() {
-        return blacklistCommands;
+        return this.blacklistCommands;
     }
     
     public boolean useLimiter() {
-        return limiterToggle;
+        return this.limiterToggle;
     }
     
     public int getLimit() {
-        return limiterLimit;
+        return this.limiterLimit;
     }
     
     public boolean useSounds() {
-        return soundToggle;
+        return this.soundToggle;
     }
     
     public List<Sound> getSounds() {
-        return sounds;
+        return this.sounds;
+    }
+
+    public float getPitch() {
+        return this.pitch;
+    }
+
+    public float getVolume() {
+        return this.volume;
     }
     
     public boolean useFireworks() {
-        return fireworkToggle;
+        return this.fireworkToggle;
     }
     
     public List<Color> getFireworkColors() {
-        return fireworkColors;
+        return this.fireworkColors;
     }
     
     public List<VoucherCommand> getRandomCommands() {
-        return randomCommands;
+        return this.randomCommands;
     }
     
     public List<VoucherCommand> getChanceCommands() {
-        return chanceCommands;
+        return this.chanceCommands;
     }
     
     public List<ItemBuilder> getItems() {
-        return items;
+        return this.items;
     }
 }
